--- a/index.html
+++ b/index.html
@@ -1,1 +1,235 @@
-<!DOCTYPE html><html><head><title>Error Fix Placeholder</title></head><body><h1>Placeholder</h1></body></html>
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content=device-width, initial-scale=1.0 />
+  <title>PrintVision - 3D Printing Services</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-pP1jU8sFqDfOIvzQeapm+cTjHYj2kQQV9FG7ezUmklvBPi49QniU4c+k8aO3PlPjIR1XZz2g64XkzF+BxU+Vw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://unpkg.com/aos@2.3.4/dist/aos.css"/>
+  <style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+
+    body {
+      font-family: 'Inter', sans-serif;
+      background-color: #f7f9fc;
+      color: #2a2a2a;
+      line-height: 1.8;
+    }
+
+    header {
+      background: linear-gradient(to right, #1f1f2e, #2c2c3e);
+      color: white;
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+
+    nav {
+      position: sticky;
+      top: 0;
+      z-index: 100;
+      background-color: #ffffffee;
+      backdrop-filter: blur(10px);
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 1.5rem;
+      padding: 1rem;
+      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
+    }
+
+    nav a {
+      color: #1f1f2e;
+      text-decoration: none;
+      font-weight: 500;
+      transition: color 0.3s;
+    }
+
+    nav a:hover {
+      color: #4e5ed3;
+    }
+
+    section {
+      padding: 4rem 1rem;
+      max-width: 960px;
+      margin: auto;
+    }
+
+    section:nth-child(even) {
+      background-color: #ffffff;
+    }
+
+    h2 {
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      color: #1f1f2e;
+    }
+
+    footer {
+      background-color: #1f1f2e;
+      color: white;
+      text-align: center;
+      padding: 1.5rem;
+      font-size: 0.9rem;
+    }
+
+    .hero {
+      background-color: #eef1f6;
+      padding: 4rem 1rem;
+      text-align: center;
+    }
+
+    .hero p {
+      font-size: 1.1rem;
+      color: #444;
+    }
+
+    .gallery {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 2rem;
+      margin-top: 2rem;
+    }
+
+    .gallery img {
+      width: 100%;
+      max-width: 280px;
+      border-radius: 16px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.06);
+      transition: transform 0.3s ease;
+    }
+
+    .gallery img:hover {
+      transform: scale(1.03);
+    }
+
+    .contact-form {
+      background-color: #fff;
+      padding: 2rem;
+      border-radius: 16px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+      margin-top: 2rem;
+    }
+
+    .contact-form input,
+    .contact-form textarea,
+    .contact-form button {
+      padding: 0.85rem;
+      font-size: 1rem;
+      width: 100%;
+      border-radius: 12px;
+      border: 1px solid #ccc;
+    }
+
+    .contact-form button {
+      background-color: #1f1f2e;
+      color: white;
+      font-weight: bold;
+      border: none;
+      cursor: pointer;
+      transition: background 0.3s;
+    }
+
+    .contact-form button:hover {
+      background-color: #3a3a55;
+    }
+
+    .logo {
+      max-width: 180px;
+      margin: 1rem auto;
+      display: block;
+      height: auto;
+    }
+
+    @media (max-width: 768px) {
+      nav {
+        flex-direction: column;
+        gap: 1rem;
+      }
+
+      .gallery {
+        flex-direction: column;
+        align-items: center;
+      }
+    }
+  </style>
+</head>
+<body>
+  <header data-aos="fade-down">
+    <img src="logo.png" alt="PrintVision Logo" class="logo">
+    <h1>PrintVision</h1>
+    <p>Turning Ideas into Reality with 3D Printing</p>
+  </header>
+
+  <nav>
+    <a href="#home"><i class="fas fa-house"></i> Home</a>
+    <a href="#products"><i class="fas fa-cubes"></i> Products</a>
+    <a href="#about"><i class="fas fa-info-circle"></i> About Us</a>
+    <a href="#custom"><i class="fas fa-pen-ruler"></i> Custom Order</a>
+    <a href="#contact"><i class="fas fa-envelope"></i> Contact</a>
+  </nav>
+
+  <section id="home" class="hero" data-aos="fade-up">
+    <h2>Welcome to PrintVision</h2>
+    <p>From idea to reality — where concepts take form.<br />I model it. I print it. You just say Yalla.</p>
+  </section>
+
+  <section id="products" data-aos="fade-up">
+    <h2>Products</h2>
+    <div class="gallery">
+      <img src="placeholder.jpg" alt="Product Sample" />
+      <img src="placeholder.jpg" alt="Product Sample" />
+    </div>
+  </section>
+
+  <section id="about" data-aos="fade-up">
+    <h2>About Us</h2>
+    <p>Welcome to PrintVision — your creative partner in custom 3D printing.</p>
+    <p>We’re here to turn your ideas into physical reality with precision, care, and a touch of style. Whether you need a unique gift, a prototype, a decoration, or something completely custom, we’ve got you covered from start to finish.</p>
+    <p>From idea to reality — where concepts take form.</p>
+    <p>At PrintVision, we believe 3D printing should be easy, fast, and personal. You bring the concept, we handle the rest. Simple as that.</p>
+    <p>Let’s build something cool together.</p>
+  </section>
+
+  <section id="custom" data-aos="fade-up">
+    <h2>Custom Orders</h2>
+    <p>Have a custom idea? Tell us what you want below and we’ll reach out as soon as possible.</p>
+    <form class="contact-form" action="https://formsubmit.co/hyazbak02@gmail.com" method="POST">
+      <input type="hidden" name="_captcha" value="false">
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
+      <input type="tel" name="phone" placeholder="Your Phone (optional)" />
+      <textarea name="message" rows="5" placeholder="Describe your custom order in detail" required></textarea>
+      <button type="submit">Submit Custom Request</button>
+    </form>
+  </section>
+
+  <section id="contact" data-aos="fade-up">
+    <h2>Contact Us</h2>
+    <form class="contact-form" action="https://formsubmit.co/hyazbak02@gmail.com" method="POST">
+      <input type="hidden" name="_captcha" value="false">
+      <input type="text" name="name" placeholder="Your Name" required />
+      <input type="email" name="email" placeholder="Your Email" required />
+      <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+      <button type="submit">Send</button>
+    </form>
+  </section>
+
+  <footer data-aos="fade-up">
+    <p>&copy; 2025 PrintVision. All rights reserved.</p>
+  </footer>
+
+  <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+  <script>AOS.init();</script>
+</body>
+</html>
