--- a/custom.html
+++ b/custom.html
@@ -92,7 +92,7 @@
     <a href="contact.html">Contact</a>
   </nav>
   <div class="content">
-<h2>Welcome to PrintVision</h2><p>From idea to reality — where concepts take form. I model it. I print it. You just say Yalla.</p><br><h3>Quick Custom Order</h3><form class='form' action='https://formsubmit.co/hyazbak02@gmail.com' method='POST'><input type='hidden' name='_captcha' value='false'><input type='text' name='name' placeholder='Your Name' required><input type='email' name='email' placeholder='Your Email' required><textarea name='message' rows='5' placeholder='Describe your custom order'></textarea><button type='submit'>Send</button></form>
+<h2>Custom Orders</h2><p>Fill out the form and we'll get in touch with you soon.</p><form class='form' action='https://formsubmit.co/hyazbak02@gmail.com' method='POST'><input type='hidden' name='_captcha' value='false'><input type='text' name='name' placeholder='Your Name' required><input type='email' name='email' placeholder='Your Email' required><textarea name='message' rows='5' placeholder='Describe your custom order'></textarea><button type='submit'>Submit Custom Order</button></form>
   </div>
   <footer>
     &copy; 2025 PrintVision. All rights reserved.
