--- a/index.html
+++ b/index.html
@@ -3,79 +3,18 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content=device-width, initial-scale=1.0" />
+  <meta name="viewport" content=device-width, initial-scale=1.0 />
   <title>PrintVision - 3D Printing Services</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous" referrerpolicy="no-referrer" />
   <style>
-    body {
-      font-family: 'Inter', sans-serif;
-      margin: 0;
-      background-color: #f7f9fc;
-      color: #2a2a2a;
-      line-height: 1.8;
-    }
-    header {
-      background: linear-gradient(to right, #1f1f2e, #2c2c3e);
-      color: white;
-      padding: 2rem 1rem;
-      text-align: center;
-    }
-    nav {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      background: #ffffff;
-      padding: 1rem;
-      gap: 1rem;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.05);
-    }
-    nav a {
-      color: #1f1f2e;
-      text-decoration: none;
-      font-weight: 500;
-    }
-    nav a:hover {
-      color: #4e5ed3;
-    }
-    .content {
-      max-width: 960px;
-      margin: 2rem auto;
-      padding: 1rem;
-    }
-    .form {
-      background: #fff;
-      padding: 2rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.05);
-    }
-    .form input, .form textarea, .form button {
-      width: 100%;
-      padding: 0.75rem;
-      margin-top: 1rem;
-      border: 1px solid #ccc;
-      border-radius: 8px;
-    }
-    .form button {
-      background: #1f1f2e;
-      color: white;
-      font-weight: bold;
-      cursor: pointer;
-    }
-    footer {
-      text-align: center;
-      background: #1f1f2e;
-      color: white;
-      padding: 2rem 1rem;
-      margin-top: 4rem;
-    }
-    img.logo {
-      max-width: 160px;
-      margin: 0 auto;
-      display: block;
-      filter: brightness(0) invert(1);
-    }
+    body { font-family: 'Inter', sans-serif; background-color: #f7f9fc; color: #2a2a2a; margin: 0; line-height: 1.8; }
+    header { background: linear-gradient(to right, #1f1f2e, #2c2c3e); color: white; padding: 2rem 1rem; text-align: center; }
+    nav { display: flex; justify-content: center; flex-wrap: wrap; background: #ffffff; padding: 1rem; gap: 1rem; box-shadow: 0 2px 4px rgba(0,0,0,0.05); }
+    nav a { color: #1f1f2e; text-decoration: none; font-weight: 500; }
+    nav a:hover { color: #4e5ed3; }
+    .content { max-width: 960px; margin: 2rem auto; padding: 1rem; }
+    footer { text-align: center; background: #1f1f2e; color: white; padding: 2rem 1rem; margin-top: 4rem; }
+    img.logo { max-width: 180px; filter: brightness(0) invert(1); margin-bottom: 1rem; }
   </style>
 </head>
 <body>
@@ -92,7 +31,7 @@
     <a href="contact.html">Contact</a>
   </nav>
   <div class="content">
-<h2>Welcome to PrintVision</h2><p>From idea to reality — where concepts take form. I model it. I print it. You just say Yalla.</p><br><h3>Quick Custom Order</h3><form class='form' action='https://formsubmit.co/hyazbak02@gmail.com' method='POST'><input type='hidden' name='_captcha' value='false'><input type='text' name='name' placeholder='Your Name' required><input type='email' name='email' placeholder='Your Email' required><textarea name='message' rows='5' placeholder='Describe your custom order'></textarea><button type='submit'>Send</button></form>
+<h2>Welcome to PrintVision</h2><p>From idea to reality — where concepts take form. I model it. I print it. You just say Yalla.</p>
   </div>
   <footer>
     &copy; 2025 PrintVision. All rights reserved.
