--- a/custom.html
+++ b/custom.html
@@ -3,18 +3,29 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content=device-width, initial-scale=1.0 />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PrintVision - 3D Printing Services</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap">
   <style>
-    body { font-family: 'Inter', sans-serif; background-color: #f7f9fc; color: #2a2a2a; margin: 0; line-height: 1.8; }
-    header { background: linear-gradient(to right, #1f1f2e, #2c2c3e); color: white; padding: 2rem 1rem; text-align: center; }
+    body { font-family: 'Inter', sans-serif; margin: 0; background-color: #f7f9fc; color: #2a2a2a; line-height: 1.8; }
+    header { background-color: #f4f4f4; text-align: center; padding: 2rem 1rem; }
     nav { display: flex; justify-content: center; flex-wrap: wrap; background: #ffffff; padding: 1rem; gap: 1rem; box-shadow: 0 2px 4px rgba(0,0,0,0.05); }
     nav a { color: #1f1f2e; text-decoration: none; font-weight: 500; }
     nav a:hover { color: #4e5ed3; }
     .content { max-width: 960px; margin: 2rem auto; padding: 1rem; }
     footer { text-align: center; background: #1f1f2e; color: white; padding: 2rem 1rem; margin-top: 4rem; }
-    img.logo { max-width: 180px; filter: brightness(0) invert(1); margin-bottom: 1rem; }
+    img.logo { max-width: 200px; margin-bottom: 1rem; }
+    form input, form textarea, form button {
+      width: 100%; padding: 0.75rem; margin-top: 1rem;
+      border: 1px solid #ccc; border-radius: 8px; font-size: 1rem;
+    }
+    form button {
+      background: #1f1f2e; color: white; font-weight: bold; cursor: pointer;
+    }
+    .form-wrapper {
+      background: #fff; padding: 2rem; border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.05); margin-top: 2rem;
+    }
   </style>
 </head>
 <body>
@@ -34,14 +45,16 @@
 
 <h2>Custom Orders</h2>
 <p>Fill out the form and we'll get in touch with you soon.</p>
-<form class='form' action='https://formsubmit.co/hyazbak02@gmail.com' method='POST'>
-  <input type='hidden' name='_captcha' value='false'>
-  <input type='text' name='name' placeholder='Your Name' required>
-  <input type='email' name='email' placeholder='Your Email' required>
-  <input type='tel' name='phone' placeholder='Your Phone (optional)'>
-  <textarea name='message' rows='5' placeholder='Describe your custom order'></textarea>
-  <button type='submit'>Submit Custom Order</button>
+<div class="form-wrapper">
+<form action="https://formsubmit.co/hyazbak02@gmail.com" method="POST">
+  <input type="hidden" name="_captcha" value="false">
+  <input type="text" name="name" placeholder="Your Name" required>
+  <input type="email" name="email" placeholder="Your Email" required>
+  <input type="tel" name="phone" placeholder="Your Phone (optional)">
+  <textarea name="message" rows="5" placeholder="Describe your custom order"></textarea>
+  <button type="submit">Submit Custom Order</button>
 </form>
+</div>
 
   </div>
   <footer>
