--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="PrintVision Logo" class="logo">
+    <img src="printer-header.png" alt="3D Printer Image" class="logo">
     <h1>PrintVision</h1>
     <p>Turning Ideas into Reality with 3D Printing</p>
   </header>
