--- a/index.html
+++ b/index.html
@@ -7,33 +7,118 @@
   <title>PrintVision - 3D Printing Services</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap">
   <style>
-    body { font-family: 'Inter', sans-serif; margin: 0; background-color: #f7f9fc; color: #2a2a2a; line-height: 1.8; }
-    header { background-color: #f4f4f4; text-align: center; padding: 2rem 1rem; }
-    nav { display: flex; justify-content: center; flex-wrap: wrap; background: #ffffff; padding: 1rem; gap: 1rem; box-shadow: 0 2px 4px rgba(0,0,0,0.05); }
-    nav a { color: #1f1f2e; text-decoration: none; font-weight: 500; }
-    nav a:hover { color: #4e5ed3; }
-    .content { max-width: 960px; margin: 2rem auto; padding: 1rem; }
-    footer { text-align: center; background: #1f1f2e; color: white; padding: 2rem 1rem; margin-top: 4rem; }
-    img.logo { max-width: 200px; margin-bottom: 1rem; }
-    form input, form textarea, form button {
-      width: 100%; padding: 0.75rem; margin-top: 1rem;
-      border: 1px solid #ccc; border-radius: 8px; font-size: 1rem;
+  * {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+  }
+  body {
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    color: #333;
+    line-height: 1.6;
+  }
+  header {
+    background: url('printer-header.png') no-repeat center center/cover;
+    color: white;
+    padding: 5rem 1rem;
+    text-align: center;
+    position: relative;
+  }
+  .logo {
+    max-width: 150px;
+    margin: 0 auto 1rem auto;
+    display: block;
+    height: auto;
+    filter: drop-shadow(0 0 5px #00000088);
+  }
+  nav {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
+    background-color: #2a2a3d;
+    padding: 1rem;
+  }
+  nav a {
+    color: white;
+    text-decoration: none;
+    font-size: 1rem;
+  }
+  section {
+    padding: 2rem 1rem;
+  }
+  footer {
+    background-color: #1f1f2e;
+    color: white;
+    text-align: center;
+    padding: 1rem;
+  }
+  .hero {
+    background-color: #e0e0e0;
+    padding: 3rem 1rem;
+    text-align: center;
+  }
+  .gallery {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
+  }
+  .gallery img {
+    width: 100%;
+    max-width: 300px;
+    height: auto;
+  }
+  .contact-form {
+    max-width: 600px;
+    margin: auto;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .contact-form input,
+  .contact-form textarea,
+  .contact-form button {
+    padding: 0.75rem;
+    font-size: 1rem;
+    width: 100%;
+  }
+
+  @media (max-width: 768px) {
+    nav {
+      flex-direction: column;
+      align-items: center;
     }
-    form button {
-      background: #1f1f2e; color: white; font-weight: bold; cursor: pointer;
+    .hero {
+      padding: 2rem 1rem;
     }
-    .form-wrapper {
-      background: #fff; padding: 2rem; border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.05); margin-top: 2rem;
+    .contact-form input,
+    .contact-form textarea,
+    .contact-form button {
+      font-size: 0.95rem;
     }
-  </style>
+  }
+
+  @media (max-width: 480px) {
+    nav a {
+      font-size: 0.9rem;
+    }
+    header h1 {
+      font-size: 1.5rem;
+    }
+    header p {
+      font-size: 1rem;
+    }
+  }
+</style>
 </head>
 <body>
   <header>
-    <img src="printer-header.png" alt="3D Printer Image" class="logo">
-    <h1>PrintVision</h1>
-    <p>Turning Ideas into Reality with 3D Printing</p>
-  </header>
+  <img src="logo.png" alt="PrintVision Logo" class="logo">
+  <h1>PrintVision</h1>
+  <p>Turning Ideas into Reality with 3D Printing</p>
+</header>
   <nav>
     <a href="index.html">Home</a>
     <a href="products.html">Products</a>
