--- a/index.html
+++ b/index.html
@@ -18,13 +18,25 @@
     color: #333;
     line-height: 1.6;
   }
-  header {
-    background: url('printer-header.png') no-repeat center center/cover;
-    color: white;
-    padding: 5rem 1rem;
-    text-align: center;
-    position: relative;
-  }
+header {
+  background-color: #1f1f2e;
+  padding: 2rem 1rem;
+  text-align: center;
+}
+    .header-image {
+  max-width: 100%;
+  height: auto;
+  border-radius: 10px;
+  margin-bottom: 1rem;
+}
+
+.logo {
+  max-width: 120px;
+  height: auto;
+  display: inline-block;
+  margin-top: -4rem;
+  filter: drop-shadow(0 0 5px #00000088);
+}
   .logo {
     max-width: 150px;
     margin: 0 auto 1rem auto;
