--- a/index.html
+++ b/index.html
@@ -7,122 +7,39 @@
   <title>PrintVision - 3D Printing Services</title>
   <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap">
   <style>
-  * {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-  }
-  body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
-    color: #333;
-    line-height: 1.6;
-  }
-header {
+  header {
   background-color: #1f1f2e;
   padding: 2rem 1rem;
   text-align: center;
 }
-    .header-image {
+
+.header-image {
   max-width: 100%;
   height: auto;
+  display: block;
+  margin: 0 auto 1rem auto;
   border-radius: 10px;
-  margin-bottom: 1rem;
 }
 
 .logo {
   max-width: 120px;
   height: auto;
   display: inline-block;
-  margin-top: -4rem;
+  margin: -3rem auto 1rem auto;
   filter: drop-shadow(0 0 5px #00000088);
 }
-  .logo {
-    max-width: 150px;
-    margin: 0 auto 1rem auto;
-    display: block;
-    height: auto;
-    filter: drop-shadow(0 0 5px #00000088);
-  }
-  nav {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 1rem;
-    background-color: #2a2a3d;
-    padding: 1rem;
-  }
-  nav a {
-    color: white;
-    text-decoration: none;
-    font-size: 1rem;
-  }
-  section {
-    padding: 2rem 1rem;
-  }
-  footer {
-    background-color: #1f1f2e;
-    color: white;
-    text-align: center;
-    padding: 1rem;
-  }
-  .hero {
-    background-color: #e0e0e0;
-    padding: 3rem 1rem;
-    text-align: center;
-  }
-  .gallery {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    gap: 1rem;
-  }
-  .gallery img {
-    width: 100%;
-    max-width: 300px;
-    height: auto;
-  }
-  .contact-form {
-    max-width: 600px;
-    margin: auto;
-    display: flex;
-    flex-direction: column;
-    gap: 1rem;
-  }
-  .contact-form input,
-  .contact-form textarea,
-  .contact-form button {
-    padding: 0.75rem;
-    font-size: 1rem;
-    width: 100%;
-  }
 
-  @media (max-width: 768px) {
-    nav {
-      flex-direction: column;
-      align-items: center;
-    }
-    .hero {
-      padding: 2rem 1rem;
-    }
-    .contact-form input,
-    .contact-form textarea,
-    .contact-form button {
-      font-size: 0.95rem;
-    }
-  }
+.hero {
+  background-color: #ffffff;
+  padding: 3rem 1rem;
+  text-align: center;
+}
 
-  @media (max-width: 480px) {
-    nav a {
-      font-size: 0.9rem;
-    }
-    header h1 {
-      font-size: 1.5rem;
-    }
-    header p {
-      font-size: 1rem;
-    }
-  }
+.hero .container {
+  max-width: 800px;
+  margin: 0 auto;
+}
+
 </style>
 </head>
 <body>
