--- a/index.html
+++ b/index.html
@@ -5,74 +5,166 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>PrintVision - 3D Printing Services</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap">
   <style>
-  header {
-  background-color: #1f1f2e;
-  padding: 2rem 1rem;
-  text-align: center;
-}
-
-.header-image {
-  max-width: 100%;
-  height: auto;
-  display: block;
-  margin: 0 auto 1rem auto;
-  border-radius: 10px;
-}
-
-.logo {
-  max-width: 120px;
-  height: auto;
-  display: inline-block;
-  margin: -3rem auto 1rem auto;
-  filter: drop-shadow(0 0 5px #00000088);
-}
-
-.hero {
-  background-color: #ffffff;
-  padding: 3rem 1rem;
-  text-align: center;
-}
-
-.hero .container {
-  max-width: 800px;
-  margin: 0 auto;
-}
-
-</style>
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
+    body {
+      font-family: Arial, sans-serif;
+      background-color: #f4f4f4;
+      color: #333;
+      line-height: 1.6;
+    }
+    header {
+      background-color: #1f1f2e;
+      padding: 2rem 1rem;
+      text-align: center;
+    }
+    .header-image {
+      max-width: 100%;
+      height: auto;
+      display: block;
+      margin: 0 auto 1rem auto;
+      border-radius: 10px;
+    }
+    .logo {
+      max-width: 120px;
+      height: auto;
+      display: inline-block;
+      margin: -3rem auto 1rem auto;
+      filter: drop-shadow(0 0 5px #00000088);
+    }
+    nav {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1rem;
+      background-color: #2a2a3d;
+      padding: 1rem;
+    }
+    nav a {
+      color: white;
+      text-decoration: none;
+      font-size: 1rem;
+    }
+    .hero {
+      background-color: #ffffff;
+      padding: 3rem 1rem;
+      text-align: center;
+    }
+    .hero .container {
+      max-width: 800px;
+      margin: 0 auto;
+    }
+    section {
+      padding: 2rem 1rem;
+    }
+    .gallery {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 1rem;
+    }
+    .gallery img {
+      width: 100%;
+      max-width: 300px;
+      height: auto;
+    }
+    .contact-form {
+      max-width: 600px;
+      margin: auto;
+      display: flex;
+      flex-direction: column;
+      gap: 1rem;
+    }
+    .contact-form input,
+    .contact-form textarea,
+    .contact-form button {
+      padding: 0.75rem;
+      font-size: 1rem;
+      width: 100%;
+    }
+    footer {
+      background-color: #1f1f2e;
+      color: white;
+      text-align: center;
+      padding: 1rem;
+    }
+    @media (max-width: 768px) {
+      nav {
+        flex-direction: column;
+        align-items: center;
+      }
+    }
+  </style>
 </head>
 <body>
   <header>
-  <img src="logo.png" alt="PrintVision Logo" class="logo">
-  <h1>PrintVision</h1>
-  <p>Turning Ideas into Reality with 3D Printing</p>
-</header>
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="products.html">Products</a>
-    <a href="about.html">About Us</a>
-    <a href="custom.html">Custom Order</a>
-    <a href="contact.html">Contact</a>
-  </nav>
-  <div class="content">
-<h2>Welcome to PrintVision</h2><p>From idea to reality — where concepts take form. I model it. I print it. You just say Yalla.</p>
-<h2>Custom Orders</h2>
-<p>Fill out the form and we'll get in touch with you soon.</p>
-<div class="form-wrapper">
-<form action="https://formsubmit.co/hyazbak02@gmail.com" method="POST">
-  <input type="hidden" name="_captcha" value="false">
-  <input type="text" name="name" placeholder="Your Name" required>
-  <input type="email" name="email" placeholder="Your Email" required>
-  <input type="tel" name="phone" placeholder="Your Phone (optional)">
-  <textarea name="message" rows="5" placeholder="Describe your custom order"></textarea>
-  <button type="submit">Submit Custom Order</button>
-</form>
-</div>
+    <img src="printer-header.png" alt="3D Printer" class="header-image">
+    <img src="logo.png" alt="PrintVision Logo" class="logo">
+    <h1>PrintVision</h1>
+    <p>Turning Ideas into Reality with 3D Printing</p>
+  </header>
 
-  </div>
+  <nav>
+    <a href="#home">Home</a>
+    <a href="#products">Products</a>
+    <a href="#about">About Us</a>
+    <a href="#custom">Custom Order</a>
+    <a href="#contact">Contact</a>
+  </nav>
+
+  <section id="home" class="hero">
+    <div class="container">
+      <h2>Welcome to PrintVision</h2>
+      <p>From idea to reality — where concepts take form.</p>
+      <p>I model it. I print it. You just say Yalla.</p>
+    </div>
+  </section>
+
+  <section id="products">
+    <h2>Products</h2>
+    <div class="gallery">
+      <img src="placeholder.jpg" alt="Product Sample" />
+      <img src="placeholder.jpg" alt="Product Sample" />
+    </div>
+  </section>
+
+  <section id="about">
+    <h2>About Us</h2>
+    <p>Welcome to PrintVision — your creative partner in custom 3D printing.</p>
+    <p>We’re here to turn your ideas into physical reality with precision, care, and a touch of style. Whether you need a unique gift, a prototype, a decoration, or something completely custom, we’ve got you covered from start to finish.</p>
+    <p>From idea to reality — where concepts take form.</p>
+    <p>At PrintVision, we believe 3D printing should be easy, fast, and personal. You bring the concept, we handle the rest. Simple as that.</p>
+    <p>Let’s build something cool together.</p>
+  </section>
+
+  <section id="custom">
+    <h2>Custom Orders</h2>
+    <p>Have a custom idea? Tell us what you want below and we’ll reach out as soon as possible.</p>
+    <form class="contact-form">
+      <input type="text" placeholder="Your Name" required />
+      <input type="email" placeholder="Your Email" required />
+      <input type="tel" placeholder="Your Phone (optional)" />
+      <textarea rows="5" placeholder="Describe your custom order in detail"></textarea>
+      <button type="submit">Submit Custom Request</button>
+    </form>
+  </section>
+
+  <section id="contact">
+    <h2>Contact Us</h2>
+    <form class="contact-form">
+      <input type="text" placeholder="Your Name" required />
+      <input type="email" placeholder="Your Email" required />
+      <textarea rows="5" placeholder="Your Message"></textarea>
+      <button type="submit">Send</button>
+    </form>
+  </section>
+
   <footer>
-    &copy; 2025 PrintVision. All rights reserved.
+    <p>&copy; 2025 PrintVision. All rights reserved.</p>
   </footer>
 </body>
 </html>
