--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
       line-height: 1.6;
     }
     header {
-      background: url('printer-header.png') no-repeat center center;
-      background-size: cover;
-      color: white;
-      padding: 4rem 1rem;
+      background: url('printer-header.png') center top no-repeat;
+      background-size: 100% auto;
+      padding: 3rem 1rem 1rem 1rem;
       text-align: center;
     }
     .logo {
       max-width: 200px;
       height: auto;
-      margin-bottom: 1rem;
+      margin-top: 2rem;
       filter: drop-shadow(0 0 5px #00000088);
     }
     nav {
