--- a/contact.html
+++ b/contact.html
@@ -4,61 +4,126 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PrintVision - 3D Printing Services</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600&display=swap">
+  <title>Contact - PrintVision</title>
   <style>
-    body { font-family: 'Inter', sans-serif; margin: 0; background-color: #f7f9fc; color: #2a2a2a; line-height: 1.8; }
-    header { background-color: #f4f4f4; text-align: center; padding: 2rem 1rem; }
-    nav { display: flex; justify-content: center; flex-wrap: wrap; background: #ffffff; padding: 1rem; gap: 1rem; box-shadow: 0 2px 4px rgba(0,0,0,0.05); }
-    nav a { color: #1f1f2e; text-decoration: none; font-weight: 500; }
-    nav a:hover { color: #4e5ed3; }
-    .content { max-width: 960px; margin: 2rem auto; padding: 1rem; }
-    footer { text-align: center; background: #1f1f2e; color: white; padding: 2rem 1rem; margin-top: 4rem; }
-    img.logo { max-width: 200px; margin-bottom: 1rem; }
-    form input, form textarea, form button {
-      width: 100%; padding: 0.75rem; margin-top: 1rem;
-      border: 1px solid #ccc; border-radius: 8px; font-size: 1rem;
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+    body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background-color: #f4f4f4;
+      color: #333;
+    }
+    header {
+      background-color: #1f1f2e;
+      color: #fff;
+      padding: 2.5rem 1rem;
+      text-align: center;
+      animation: fadeIn 1s ease-in;
+    }
+    header h1 {
+      font-size: 2.5rem;
+    }
+    header p {
+      font-size: 1.1rem;
+      opacity: 0.8;
+    }
+    nav {
+      display: flex;
+      justify-content: center;
+      background-color: #2a2a3d;
+      padding: 1rem;
+      gap: 2rem;
+      animation: slideDown 0.5s ease-out;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      transition: color 0.3s ease;
+    }
+    nav a:hover {
+      color: #00d0ff;
+    }
+    main {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+      animation: fadeIn 0.8s ease-in;
+    }
+    h2 {
+      margin-bottom: 1rem;
+      font-size: 2rem;
+      color: #1f1f2e;
+    }
+    p {
+      margin-bottom: 1rem;
+      font-size: 1.05rem;
+      line-height: 1.6;
+    }
+    form input,
+    form textarea,
+    form button {
+      width: 100%;
+      padding: 0.75rem;
+      margin-bottom: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 6px;
+      font-size: 1rem;
     }
     form button {
-      background: #1f1f2e; color: white; font-weight: bold; cursor: pointer;
+      background-color: #1f1f2e;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+      transition: background 0.3s ease;
     }
-    .form-wrapper {
-      background: #fff; padding: 2rem; border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.05); margin-top: 2rem;
+    form button:hover {
+      background-color: #00d0ff;
+      color: #000;
+    }
+    footer {
+      background-color: #1f1f2e;
+      color: #fff;
+      text-align: center;
+      padding: 1.5rem 1rem;
+      margin-top: 3rem;
+    }
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+    @keyframes slideDown {
+      from { transform: translateY(-100%); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="PrintVision Logo" class="logo">
     <h1>PrintVision</h1>
-    <p>Turning Ideas into Reality with 3D Printing</p>
+    <p>From idea to reality — where concepts take form.</p>
   </header>
   <nav>
     <a href="index.html">Home</a>
     <a href="products.html">Products</a>
     <a href="about.html">About Us</a>
-    <a href="custom.html">Custom Order</a>
+    <a href="custom.html">Custom Orders</a>
     <a href="contact.html">Contact</a>
   </nav>
-  <div class="content">
-
-<h2>Contact Us</h2>
-<p>Reach out anytime!</p>
-<div class="form-wrapper">
-<form action="https://formsubmit.co/hyazbak02@gmail.com" method="POST">
-  <input type="hidden" name="_captcha" value="false">
-  <input type="text" name="name" placeholder="Your Name" required>
-  <input type="email" name="email" placeholder="Your Email" required>
-  <input type="tel" name="phone" placeholder="Your Phone (optional)">
-  <textarea name="message" rows="5" placeholder="Your Message"></textarea>
-  <button type="submit">Send</button>
-</form>
-</div>
-
-  </div>
+  <main>
+    <h2>Contact Us</h2>
+        <form>
+          <input type="text" placeholder="Your Name" required />
+          <input type="email" placeholder="Your Email" required />
+          <textarea placeholder="Your Message" rows="5"></textarea>
+          <button type="submit">Send</button>
+        </form>
+  </main>
   <footer>
-    &copy; 2025 PrintVision. All rights reserved.
+    <p>&copy; 2025 PrintVision. All rights reserved.</p>
   </footer>
 </body>
 </html>
