--- a/index.html
+++ b/index.html
@@ -4,146 +4,118 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>PrintVision - 3D Printing Services</title>
+  <title>Home - PrintVision</title>
   <style>
     * {
-      box-sizing: border-box;
       margin: 0;
       padding: 0;
+      box-sizing: border-box;
     }
     body {
-      font-family: Arial, sans-serif;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       background-color: #f4f4f4;
       color: #333;
-      line-height: 1.6;
     }
     header {
-      background: url('printer-header.png') center top no-repeat;
-      background-size: 100% auto;
-      padding: 3rem 1rem 1rem 1rem;
+      background-color: #1f1f2e;
+      color: #fff;
+      padding: 2.5rem 1rem;
       text-align: center;
+      animation: fadeIn 1s ease-in;
     }
-    .logo {
-      max-width: 200px;
-      height: auto;
-      margin-top: 2rem;
-      filter: drop-shadow(0 0 5px #00000088);
+    header h1 {
+      font-size: 2.5rem;
+    }
+    header p {
+      font-size: 1.1rem;
+      opacity: 0.8;
     }
     nav {
       display: flex;
-      flex-wrap: wrap;
       justify-content: center;
-      gap: 1rem;
       background-color: #2a2a3d;
       padding: 1rem;
+      gap: 2rem;
+      animation: slideDown 0.5s ease-out;
     }
     nav a {
-      color: white;
+      color: #fff;
       text-decoration: none;
-      font-size: 1rem;
+      font-weight: bold;
+      transition: color 0.3s ease;
     }
-    section {
-      padding: 2rem 1rem;
+    nav a:hover {
+      color: #00d0ff;
     }
-    .gallery {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 1rem;
+    main {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+      animation: fadeIn 0.8s ease-in;
     }
-    .gallery img {
+    h2 {
+      margin-bottom: 1rem;
+      font-size: 2rem;
+      color: #1f1f2e;
+    }
+    p {
+      margin-bottom: 1rem;
+      font-size: 1.05rem;
+      line-height: 1.6;
+    }
+    form input,
+    form textarea,
+    form button {
       width: 100%;
-      max-width: 300px;
-      height: auto;
-    }
-    .contact-form {
-      max-width: 600px;
-      margin: auto;
-      display: flex;
-      flex-direction: column;
-      gap: 1rem;
-    }
-    .contact-form input,
-    .contact-form textarea,
-    .contact-form button {
       padding: 0.75rem;
+      margin-bottom: 1rem;
+      border: 1px solid #ccc;
+      border-radius: 6px;
       font-size: 1rem;
-      width: 100%;
+    }
+    form button {
+      background-color: #1f1f2e;
+      color: #fff;
+      border: none;
+      cursor: pointer;
+      transition: background 0.3s ease;
+    }
+    form button:hover {
+      background-color: #00d0ff;
+      color: #000;
     }
     footer {
       background-color: #1f1f2e;
-      color: white;
+      color: #fff;
       text-align: center;
-      padding: 1rem;
+      padding: 1.5rem 1rem;
+      margin-top: 3rem;
     }
-    @media (max-width: 768px) {
-      nav {
-        flex-direction: column;
-        align-items: center;
-      }
+    @keyframes fadeIn {
+      from { opacity: 0; }
+      to { opacity: 1; }
+    }
+    @keyframes slideDown {
+      from { transform: translateY(-100%); opacity: 0; }
+      to { transform: translateY(0); opacity: 1; }
     }
   </style>
 </head>
 <body>
   <header>
-    <img src="logo.png" alt="PrintVision Logo" class="logo">
     <h1>PrintVision</h1>
-    <p>Turning Ideas into Reality with 3D Printing</p>
+    <p>From idea to reality — where concepts take form.</p>
   </header>
-
   <nav>
-    <a href="#home">Home</a>
-    <a href="#products">Products</a>
-    <a href="#about">About Us</a>
-    <a href="#custom">Custom Order</a>
-    <a href="#contact">Contact</a>
+    <a href="index.html">Home</a>
+    <a href="products.html">Products</a>
+    <a href="about.html">About Us</a>
+    <a href="custom.html">Custom Orders</a>
+    <a href="contact.html">Contact</a>
   </nav>
-
-  <section id="home" class="hero">
-    <h2>Welcome to PrintVision</h2>
-    <p>From idea to reality — where concepts take form.</p>
-    <p>I model it. I print it. You just say Yalla.</p>
-  </section>
-
-  <section id="products">
-    <h2>Products</h2>
-    <div class="gallery">
-      <img src="placeholder.jpg" alt="Product Sample" />
-      <img src="placeholder.jpg" alt="Product Sample" />
-    </div>
-  </section>
-
-  <section id="about">
-    <h2>About Us</h2>
-    <p>Welcome to PrintVision — your creative partner in custom 3D printing.</p>
-    <p>We’re here to turn your ideas into physical reality with precision, care, and a touch of style. Whether you need a unique gift, a prototype, a decoration, or something completely custom, we’ve got you covered from start to finish.</p>
-    <p>From idea to reality — where concepts take form.</p>
-    <p>At PrintVision, we believe 3D printing should be easy, fast, and personal. You bring the concept, we handle the rest. Simple as that.</p>
-    <p>Let’s build something cool together.</p>
-  </section>
-
-  <section id="custom">
-    <h2>Custom Orders</h2>
-    <p>Have a custom idea? Tell us what you want below and we’ll reach out as soon as possible.</p>
-    <form class="contact-form">
-      <input type="text" placeholder="Your Name" required />
-      <input type="email" placeholder="Your Email" required />
-      <input type="tel" placeholder="Your Phone (optional)" />
-      <textarea rows="5" placeholder="Describe your custom order in detail"></textarea>
-      <button type="submit">Submit Custom Request</button>
-    </form>
-  </section>
-
-  <section id="contact">
-    <h2>Contact Us</h2>
-    <form class="contact-form">
-      <input type="text" placeholder="Your Name" required />
-      <input type="email" placeholder="Your Email" required />
-      <textarea rows="5" placeholder="Your Message"></textarea>
-      <button type="submit">Send</button>
-    </form>
-  </section>
-
+  <main>
+    <h2>Welcome to PrintVision</h2><p>I model it. I print it. You just say Yalla.</p>
+  </main>
   <footer>
     <p>&copy; 2025 PrintVision. All rights reserved.</p>
   </footer>
