--- a/about.html
+++ b/about.html
@@ -116,8 +116,10 @@
   <main>
     <h2>About Us</h2>
         <p>Welcome to PrintVision — your creative partner in custom 3D printing.</p>
-        <p>We’re here to turn your ideas into physical reality with precision, care, and a touch of style.</p>
+        <p>We’re here to turn your ideas into physical reality with precision, care, and a touch of style. Whether you need a unique gift, a prototype, a decoration, or something completely custom, we’ve got you covered from start to finish.</p>
+        <p>From idea to reality — where concepts take form.</p>
         <p>At PrintVision, we believe 3D printing should be easy, fast, and personal. You bring the concept, we handle the rest. Simple as that.</p>
+        <p>Let’s build something cool together.</p>
   </main>
   <footer>
     <p>&copy; 2025 PrintVision. All rights reserved.</p>
