--- a/index.html
+++ b/index.html
@@ -114,7 +114,9 @@
     <a href="contact.html">Contact</a>
   </nav>
   <main>
-    <h2>Welcome to PrintVision</h2><p>I model it. I print it. You just say Yalla.</p>
+    <h2>Welcome to PrintVision</h2>
+        <p>I model it. I print it. You just say Yalla.</p>
+        <p><a href='custom.html'>Need something custom?</a> We’ve got you covered.</p>
   </main>
   <footer>
     <p>&copy; 2025 PrintVision. All rights reserved.</p>
