--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,8 @@
         <form>
           <input type="text" placeholder="Your Name" required />
           <input type="email" placeholder="Your Email" required />
-          <textarea placeholder="Your Message" rows="5"></textarea>
+          <input type="tel" placeholder="Phone (optional)" />
+          <textarea placeholder="Your Message" rows="5" required></textarea>
           <button type="submit">Send</button>
         </form>
   </main>
