--- a/custom.html
+++ b/custom.html
@@ -119,7 +119,7 @@
           <input type="text" placeholder="Your Name" required />
           <input type="email" placeholder="Your Email" required />
           <input type="tel" placeholder="Phone (optional)" />
-          <textarea placeholder="Describe your custom order" rows="5"></textarea>
+          <textarea placeholder="Describe your custom order" rows="5" required></textarea>
           <button type="submit">Submit</button>
         </form>
   </main>
