--- a/about.html
+++ b/about.html
@@ -103,6 +103,8 @@
 </head>
 <body>
   <header>
+<img src='printer-header.png' alt='3D Printer' style='max-width:100%; height:auto; border-bottom: 3px solid #00d0ff;'>
+<img src='logo.png' alt='PrintVision Logo' style='max-width:120px; margin-top:1rem;'>
     <h1>PrintVision</h1>
     <p>From idea to reality — where concepts take form.</p>
   </header>
@@ -114,12 +116,14 @@
     <a href="contact.html">Contact</a>
   </nav>
   <main>
-    <h2>About Us</h2>
-        <p>Welcome to PrintVision — your creative partner in custom 3D printing.</p>
-        <p>We’re here to turn your ideas into physical reality with precision, care, and a touch of style. Whether you need a unique gift, a prototype, a decoration, or something completely custom, we’ve got you covered from start to finish.</p>
-        <p>From idea to reality — where concepts take form.</p>
-        <p>At PrintVision, we believe 3D printing should be easy, fast, and personal. You bring the concept, we handle the rest. Simple as that.</p>
-        <p>Let’s build something cool together.</p>
+    
+<h2>About Us</h2>
+<p>Welcome to PrintVision — your creative partner in custom 3D printing.</p>
+<p>We’re here to turn your ideas into physical reality with precision, care, and a touch of style. Whether you need a unique gift, a prototype, a decoration, or something completely custom, we’ve got you covered from start to finish.</p>
+<p>From idea to reality — where concepts take form.</p>
+<p>At PrintVision, we believe 3D printing should be easy, fast, and personal. You bring the concept, we handle the rest. Simple as that.</p>
+<p>Let’s build something cool together.</p>
+
   </main>
   <footer>
     <p>&copy; 2025 PrintVision. All rights reserved.</p>
