--- a/index.html
+++ b/index.html
@@ -103,6 +103,8 @@
 </head>
 <body>
   <header>
+<img src='printer-header.png' alt='3D Printer' style='max-width:100%; height:auto; border-bottom: 3px solid #00d0ff;'>
+<img src='logo.png' alt='PrintVision Logo' style='max-width:120px; margin-top:1rem;'>
     <h1>PrintVision</h1>
     <p>From idea to reality — where concepts take form.</p>
   </header>
@@ -114,9 +116,12 @@
     <a href="contact.html">Contact</a>
   </nav>
   <main>
-    <h2>Welcome to PrintVision</h2>
-        <p>I model it. I print it. You just say Yalla.</p>
-        <p><a href='custom.html'>Need something custom?</a> We’ve got you covered.</p>
+    
+<h2>Welcome to PrintVision</h2>
+<p>I model it. I print it. You just say Yalla.</p>
+<h3 style="margin-top:2rem;">Need Something Custom?</h3>
+<p><a href='custom.html'>Click here to place a custom order</a> — just tell us what you want and we’ll make it happen.</p>
+
   </main>
   <footer>
     <p>&copy; 2025 PrintVision. All rights reserved.</p>
