--- a/custom.html
+++ b/custom.html
@@ -103,6 +103,8 @@
 </head>
 <body>
   <header>
+<img src='printer-header.png' alt='3D Printer' style='max-width:100%; height:auto; border-bottom: 3px solid #00d0ff;'>
+<img src='logo.png' alt='PrintVision Logo' style='max-width:120px; margin-top:1rem;'>
     <h1>PrintVision</h1>
     <p>From idea to reality — where concepts take form.</p>
   </header>
