--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>About Us - PrintVision</title>
+  <title>About - PrintVision</title>
   <style>
     * {
       margin: 0;
@@ -103,8 +103,12 @@
 </head>
 <body>
   <header>
-    <img src='printer-header.png' alt='3D Printer Banner' style='width:100%; height:auto; max-height:300px; object-fit:cover; border-bottom: 3px solid #00d0ff;'>
-    <img src='logo.png' alt='PrintVision Logo' style='max-width:180px; margin-top:1rem;'>
+
+<div style='max-height:250px; overflow:hidden;'>
+  <img src='printer-header.png' alt='3D Printer Banner' style='width:100%; object-fit:cover;'>
+</div>
+<img src='logo.png' alt='PrintVision Logo' style='max-width:220px; margin-top:1rem; display:block; margin-left:auto; margin-right:auto;'>
+
     <h1>PrintVision</h1>
     <p>From idea to reality — where concepts take form.</p>
   </header>
