--- a/products.html
+++ b/products.html
@@ -103,8 +103,12 @@
 </head>
 <body>
   <header>
-<img src='printer-header.png' alt='3D Printer' style='max-width:100%; height:auto; border-bottom: 3px solid #00d0ff;'>
-<img src='logo.png' alt='PrintVision Logo' style='max-width:120px; margin-top:1rem;'>
+
+<div style='max-height:250px; overflow:hidden;'>
+  <img src='printer-header.png' alt='3D Printer Banner' style='width:100%; object-fit:cover;'>
+</div>
+<img src='logo.png' alt='PrintVision Logo' style='max-width:220px; margin-top:1rem; display:block; margin-left:auto; margin-right:auto;'>
+
     <h1>PrintVision</h1>
     <p>From idea to reality — where concepts take form.</p>
   </header>
@@ -116,7 +120,10 @@
     <a href="contact.html">Contact</a>
   </nav>
   <main>
-    <h2>Products</h2><p>Gallery of featured 3D prints will go here.</p>
+    
+<h2>Products</h2>
+<p>Gallery of featured 3D prints will go here.</p>
+
   </main>
   <footer>
     <p>&copy; 2025 PrintVision. All rights reserved.</p>
