--- a/about.html
+++ b/about.html
@@ -90,7 +90,7 @@
 <body>
   
 <header style="width: 100%;">
-  <img src="header-final.png" alt="PrintVision Header" style="width: 100%; height: auto; display: block;" />
+  <img src="banner.png" alt="PrintVision Banner" style="width: 100%; height: auto; display: block;" />
 </header>
 
   <nav>
