--- a/signup.html
+++ b/signup.html
@@ -1,27 +1,108 @@
 
 <!DOCTYPE html>
-<html><head><meta charset="UTF-8"><title>Sign Up</title></head>
+<html><head>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Sign Up</title>
+<style>
+  body {
+    font-family: 'Segoe UI', sans-serif;
+    background-color: #f9f9f9;
+    margin: 0;
+    padding: 0;
+  }
+  header img {
+    width: 100%;
+    max-height: 250px;
+    object-fit: cover;
+  }
+  nav {
+    background-color: #1f1f2e;
+    padding: 1rem;
+    display: flex;
+    justify-content: center;
+    gap: 2rem;
+    flex-wrap: wrap;
+  }
+  nav a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: 500;
+  }
+  nav a:hover {
+    color: #00cfff;
+  }
+  main {
+    max-width: 600px;
+    margin: 2rem auto;
+    padding: 1rem;
+    background: white;
+    border-radius: 10px;
+    box-shadow: 0 2px 10px rgba(0,0,0,0.05);
+  }
+  form input, form textarea, form button {
+    width: 100%;
+    margin-bottom: 1rem;
+    padding: 0.75rem;
+    font-size: 1rem;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+  }
+  form button {
+    background-color: #1f1f2e;
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
+  }
+  form button:hover {
+    background-color: #00cfff;
+    color: black;
+  }
+  footer {
+    background-color: #1f1f2e;
+    color: white;
+    text-align: center;
+    padding: 1rem;
+    margin-top: 3rem;
+  }
+</style>
+</head>
 <body>
-  <h2>Sign Up</h2>
-  <form id="signup-form">
-    <input type="email" id="email" placeholder="Email" required><br>
-    <input type="password" id="password" placeholder="Password" required><br>
-    <button type="submit">Sign Up</button>
-  </form>
-  <p id="signup-status"></p>
-  
+<header><img src="banner.png" alt="PrintVision banner" /></header>
+<nav>
+  <a href="index.html">Home</a>
+  <a href="products.html">Products</a>
+  <a href="about.html">About Us</a>
+  <a href="custom.html">Custom Orders</a>
+  <a href="contact.html">Contact</a>
+  <a href="login.html">Login</a>
+  <a href="signup.html">Sign Up</a>
+</nav>
+<main>
+
+<h2>Sign Up</h2>
+<form id="signup-form">
+  <input type="email" id="email" placeholder="Email" required>
+  <input type="password" id="password" placeholder="Password" required>
+  <button type="submit">Sign Up</button>
+</form>
+<p id="signup-status"></p>
+
 <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
 <script>
-  const supabase = supabase.createClient("https://icfyunclfbpohaphyzif.supabase.co", "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImljZnl1bmNsZmJwb2hhcGh5emlmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NDY4MjM0MDMsImV4cCI6MjA2MjM5OTQwM30.jopP7MxDjPiZtez3BPIy_Iy-SiqvUWPxOkssEZlEAIg");
+  const supabase = supabase.createClient("https://icfyunclfbpohaphyzif.supabase.co", "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9...");
 </script>
 
-  <script>
-    document.getElementById('signup-form').addEventListener('submit', async (e) => {
-      e.preventDefault();
-      const email = document.getElementById('email').value;
-      const password = document.getElementById('password').value;
-      const { error } = await supabase.auth.signUp({ email, password });
-      document.getElementById('signup-status').textContent = error ? error.message : 'Signed up!';
-    });
-  </script>
+<script>
+  document.getElementById('signup-form').addEventListener('submit', async (e) => {
+    e.preventDefault();
+    const email = document.getElementById('email').value;
+    const password = document.getElementById('password').value;
+    const { error } = await supabase.auth.signUp({ email, password });
+    document.getElementById('signup-status').textContent = error ? error.message : 'Signed up!';
+  });
+</script>
+
+</main>
+<footer>&copy; 2025 PrintVision. All rights reserved.</footer>
 </body></html>
