--- a/index.html
+++ b/index.html
@@ -1,38 +1,32 @@
 
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Index - PrintVision</title>
-  
-<style>
-  @media (max-width: 768px) {
-    header img {
-      max-height: 150px !important;
-    }
-  }
-</style>
-
+  <title>PrintVision</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
-      font-family: 'Segoe UI', Tahoma, sans-serif;
+      font-family: 'Segoe UI', sans-serif;
       background-color: #f8f9fb;
-      color: #2c2c2c;
+      margin: 0;
+    }
+    header img {
+      width: 100%;
+      max-height: 250px;
+      object-fit: cover;
     }
     nav {
-      display: flex;
-      justify-content: center;
-      flex-wrap: wrap;
-      gap: 1.5rem;
       background-color: #1f1f2e;
       padding: 1rem;
+      display: flex;
+      justify-content: center;
+      gap: 1.5rem;
+      flex-wrap: wrap;
     }
     nav a {
-      color: #fff;
+      color: white;
       text-decoration: none;
-      font-weight: bold;
     }
     nav a:hover {
       color: #00cfff;
@@ -40,30 +34,23 @@
     main {
       max-width: 600px;
       margin: 2rem auto;
-      padding: 1rem;
-    }
-    h2 {
-      font-size: 2rem;
-      margin-bottom: 1.5rem;
-    }
-    form {
+      padding: 2rem;
       background: white;
-      padding: 1.5rem;
-      border-radius: 8px;
+      border-radius: 10px;
       box-shadow: 0 0 10px rgba(0,0,0,0.05);
     }
-    form input, form select, form button, form textarea {
+    form input, form textarea, form button {
       width: 100%;
       padding: 0.75rem;
       margin-bottom: 1rem;
       font-size: 1rem;
-      border: 1px solid #ccc;
       border-radius: 4px;
+      border: 1px solid #ccc;
     }
     form button {
       background-color: #1f1f2e;
       color: white;
-      border: none;
+      font-weight: bold;
       cursor: pointer;
     }
     form button:hover {
@@ -74,48 +61,63 @@
       background-color: #1f1f2e;
       color: white;
       text-align: center;
-      padding: 1.5rem 1rem;
+      padding: 1rem;
       margin-top: 3rem;
     }
   </style>
 </head>
 <body>
+<header><img src="banner.png" alt="Banner" /></header>
+<nav>
+  <a href="index.html">Home</a>
+  <a href="products.html">Products</a>
+  <a href="about.html">About Us</a>
+  <a href="custom.html">Custom Orders</a>
+  <a href="contact.html">Contact</a>
+  <a href="login.html">Login</a>
+  <a href="signup.html">Sign Up</a>
+</nav>
+<main>
+  <h2>Welcome to PrintVision</h2>
+  <p>I model it. I print it. You just say Yalla.</p>
   
-<header style="width: 100%;">
-  <img src="banner.png" alt="PrintVision Banner" style="
-    width: 100%;
-    max-height: 250px;
-    object-fit: cover;
-    display: block;
-  " />
-</header>
-
-  <nav>
-    <a href="index.html">Home</a>
-    <a href="products.html">Products</a>
-    <a href="about.html">About Us</a>
-    <a href="custom.html">Custom Orders</a>
-    <a href="contact.html">Contact</a>
-    <a href="login.html">Login</a>
-    <a href="signup.html">Sign Up</a>
-  </nav>
-  <main>
-    
-<h2>Welcome to PrintVision</h2>
-<p>I model it. I print it. You just say Yalla.</p>
-<h2 style="margin-top: 2rem;">Custom Orders</h2>
+<h2>Custom Orders</h2>
 <p>Need something special printed? Fill out the form below and we’ll make it real.</p>
-<form>
-  <input type="text" placeholder="Your Name" required />
-  <input type="email" placeholder="Your Email" required />
-  <input type="tel" placeholder="Phone (optional)" />
-  <textarea placeholder="Describe your custom order" rows="5" required></textarea>
+<form id="custom-form">
+  <input type="text" id="name" placeholder="Your Name" required />
+  <input type="email" id="email" placeholder="Your Email" required />
+  <input type="tel" id="phone" placeholder="Phone (optional)" />
+  <textarea id="details" placeholder="Describe your custom order" required></textarea>
   <button type="submit">Submit</button>
 </form>
+<p id="custom-status"></p>
 
-  </main>
-  <footer>
-    <p>&copy; 2025 PrintVision. All rights reserved.</p>
-  </footer>
+</main>
+<footer>
+  <p>&copy; 2025 PrintVision. All rights reserved.</p>
+</footer>
+
+<script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js"></script>
+<script>
+  const supabase = supabase.createClient(
+    "https://icfyunclfbpohaphyzif.supabase.co",
+    "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9..."
+  );
+
+  document.getElementById("custom-form").addEventListener("submit", async (e) => {
+    e.preventDefault();
+    const name = document.getElementById("name").value;
+    const email = document.getElementById("email").value;
+    const phone = document.getElementById("phone").value;
+    const details = document.getElementById("details").value;
+    const { error } = await supabase
+      .from("custom_orders")
+      .insert([{ name, email, phone, details }]);
+    document.getElementById("custom-status").textContent = error
+      ? error.message
+      : "Order sent!";
+  });
+</script>
+
 </body>
 </html>
